# trep_omni_cart

./: .gitignore  CMakeLists.txt  README.md  cart-only.py  cart-pend.py  cart-pendLQR.py  cart-pendhyrbrid.py  ordering.py  package.xml  record.sh
ergodic/: bad_cart.txt  bad_ff.txt  bad_mass.txt  bad_trep.txt  good_cart.txt  good_ff.txt  good_mass.txt  good_trep.txt
ergodic/timed-10/: pump1.bag  pump1_cart.txt  pump1_ff.txt  pump1_mass.txt  pump1_trep.txt  pump2.bag  pump2_cart.txt  pump2_ff.txt  pump2_mass.txt  pump2_trep.txt  pump3.bag  pump3_cart.txt  pump3_ff.txt  pump3_mass.txt  pump3_trep.txt  pump4.bag  pump4_cart.txt  pump4_ff.txt  pump4_mass.txt  pump4_trep.txt  pump5.bag  pump5_cart.txt  pump5_ff.txt  pump5_mass.txt  pump5_trep.txt  swingccw1.bag  swingccw1_backup_0.bag  swingccw1_cart.txt  swingccw1_ff.txt  swingccw1_mass.txt  swingccw1_trep.txt  swingccw2.bag  swingccw2_cart.txt  swingccw2_ff.txt  swingccw2_mass.txt  swingccw2_trep.txt  swingccw3.bag  swingccw3_backup_0.bag  swingccw3_cart.txt  swingccw3_ff.txt  (+45 more)
latex/: protocol.tex
launch/: cart_pend.launch  cart_sim.launch  trep_omni_config.rviz
msg/: trepsys.msg
src/: cart_pend_simulator.py  cart_simulator.py
trajectories/successes/: lazy_cart.txt  lazy_ff.txt  lazy_mass.txt  lazy_trep.txt  pump.bag  pump_cart.txt  pump_ff.txt  pump_mass.txt  pump_trep.txt  swing1.bag  swing1_backup_0.bag  swing1_cart.txt  swing1_ff.txt  swing1_mass.txt  swing1_trep.txt
trajectories/timed-10/: lazy.bag  lazy_backup_0.bag  lazy_cart.txt  lazy_ff.txt  lazy_mass.txt  lazy_trep.txt  pump.bag  pump1.bag  pump1_ff.txt  (+87 more)
(+85 files in other folders)
